# expense-tracker-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDBOOK.docx  HANDBOOK.md  README.md  WAKE_UP.md  alembic.ini  pyproject.toml
.cursor/rules/: keep-handbook-current.mdc
.github/workflows/: ci.yml  keep-hf-alive.yml  keep-render-alive.yml
deploy/huggingface-edition/: .env.example  DEPLOY.md  README.md  README_TEMPLATE.md  secrets-checklist.md
deploy/nocodb-edition/: DEPLOY.md  README.md  docker-compose.yml  expense-bot.service  setup.sh  update.sh
deploy/oracle/: DEPLOY.md  README.md  expense-bot.service  setup.sh  update.sh
deploy/render-edition/: DEPLOY.md  README.md  render.yaml  secrets-checklist.md
deploy/sheets-edition/: DEPLOY.md  README.md  expense-bot.service  setup.sh  update.sh
docs/: ARCHITECTURE.md  HANDBOOK.docx  HANDBOOK.md  MASTER_GUIDE.docx  MASTER_GUIDE.md  WAKE_UP.md
scripts/: _one_off_prebuild_year.py  _one_off_retry_failed.py  build_handbook.py
src/expense_tracker/: __init__.py  __main__.py  config.py
src/expense_tracker/extractor/: __init__.py  categories.py  expense_extractor.py  intent_classifier.py  orchestrator.py  prompts.py  retrieval_extractor.py  schemas.py
src/expense_tracker/extractor/data/: categories.yaml
src/expense_tracker/ledger/: __init__.py  base.py  factory.py
src/expense_tracker/ledger/mirror/: __init__.py  adapter.py  reconcile.py
src/expense_tracker/ledger/nocodb/: __init__.py  adapter.py  exceptions.py  factory.py  models.py
src/expense_tracker/ledger/nocodb/migrations/: __init__.py  env.py
src/expense_tracker/ledger/nocodb/migrations/versions/: 0001_initial_schema.py
src/expense_tracker/ledger/sheets/: __init__.py  adapter.py  credentials.py  exceptions.py  factory.py  format.py  gspread_backend.py  transactions.py  ytd_builder.py
src/expense_tracker/llm/: __init__.py  _fake.py  _json_repair.py  _traced.py  anthropic_client.py  base.py  exceptions.py  factory.py  groq_client.py  ollama_client.py  openai_client.py
src/expense_tracker/pipeline/: __init__.py  chat.py  correction.py  exceptions.py  factory.py  logger.py  reply.py  retrieval.py  summary.py
src/expense_tracker/sheets/: backend.py  currency.py  factory.py  format.py  gspread_backend.py  month_builder.py  transactions.py  year_builder.py  ytd_builder.py
src/expense_tracker/sheets/data/: sheet_format.yaml
src/expense_tracker/storage/: __init__.py  base.py  factory.py  jsonl_store.py
src/expense_tracker/telegram_app/: __init__.py  auth.py  bot.py  factory.py  health_server.py
tests/: conftest.py  test_categories.py  test_config.py  test_expense_extractor.py  test_extractor_schemas.py  test_intent_classifier.py  test_ledger_mirror.py  test_ledger_mirror_reconcile.py  test_ledger_postgres.py  test_ledger_postgres_alembic.py  test_llm_factory.py  test_llm_fake.py  test_llm_json_repair.py  test_llm_traced.py  test_orchestrator.py  test_pipeline_chat.py  test_pipeline_correction.py  test_pipeline_logger.py  test_pipeline_reply.py  test_pipeline_retrieval.py  test_pipeline_summary.py  test_retrieval_extractor.py  test_sheets_backend_fake.py  test_sheets_credentials.py  test_sheets_currency.py  test_sheets_factory.py  test_sheets_format.py  test_sheets_month_builder.py  test_sheets_transactions.py  test_sheets_year_builder.py  test_sheets_ytd_builder.py  test_storage_jsonl.py  test_telegram_auth.py  test_telegram_correction.py  test_telegram_handlers.py  test_telegram_health_server.py  test_telegram_processor.py  test_telegram_summary_processor.py
