[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-tracker"
version = "0.0.1"
description = "Chat-driven personal expense tracker that logs into Google Sheets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vinay" }]
# Runtime dependencies are intentionally empty for the scaffold commit.
# Each upcoming feature commit will add only the libraries it actually needs,
# so the dependency history stays a readable trail of "what each step pulled in".
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
# Will eventually expose `expense add "..."` and `expense ask "..."`.
# Pointed at __main__ for now so `pip install -e .` works end-to-end.
expense = "expense_tracker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/expense_tracker"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
