[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-tracker"
version = "0.0.3"
description = "Chat-driven personal expense tracker that logs into Google Sheets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vinay" }]
dependencies = [
    # HTTP client used by Ollama / for any direct REST calls.
    "httpx>=0.27,<1.0",
    # Type-safe data models everywhere.
    "pydantic>=2.5,<3.0",
    # Loads .env + env vars into a typed Settings class.
    "pydantic-settings>=2.1,<3.0",
    # Pulled in by pydantic-settings, listed explicitly for clarity.
    "python-dotenv>=1.0",
    # Retry-with-backoff used by every provider client.
    "tenacity>=8.5,<10.0",
    # Official Groq SDK (primary provider).
    "groq>=0.13,<1.0",
    # YAML loader for category / sheet-format / vocabulary configs.
    "pyyaml>=6.0,<7.0",
    # Robust natural-language date parsing fallback (the LLM does most of it).
    "python-dateutil>=2.8,<3.0",
    # Timezone data — required on Windows / minimal Linux images.
    "tzdata>=2024.1; platform_system == 'Windows'",
]

# Optional providers — install only when actually using them.
#   pip install -e ".[openai]"      → enables ChatGPT
#   pip install -e ".[anthropic]"   → enables Claude
#   pip install -e ".[all]"         → all providers
[project.optional-dependencies]
openai = ["openai>=1.40,<2.0"]
anthropic = ["anthropic>=0.40,<1.0"]
all = ["openai>=1.40,<2.0", "anthropic>=0.40,<1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
expense = "expense_tracker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/expense_tracker"]

# Bundle category / sheet-format YAML files into the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/expense_tracker/extractor/data" = "expense_tracker/extractor/data"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]
ignore = [
    "N803",  # arg name should be lowercase  (we use UPPERCASE for env-style settings)
    "N806",  # variable should be lowercase  (same reason)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "error",
    # pydantic-settings deprecation warnings from upstream — not our problem
    "ignore::DeprecationWarning:pydantic.*",
]
