[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-tracker"
version = "0.0.6"
description = "Chat-driven personal expense tracker that logs into Google Sheets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vinay" }]
dependencies = [
    # HTTP client used by Ollama / for any direct REST calls.
    "httpx>=0.27,<1.0",
    # Type-safe data models everywhere.
    "pydantic>=2.5,<3.0",
    # Loads .env + env vars into a typed Settings class.
    "pydantic-settings>=2.1,<3.0",
    # Pulled in by pydantic-settings, listed explicitly for clarity.
    "python-dotenv>=1.0",
    # Retry-with-backoff used by every provider client.
    "tenacity>=8.5,<10.0",
    # Official Groq SDK (primary provider).
    "groq>=0.13,<1.0",
    # YAML loader for category / sheet-format / vocabulary configs.
    "pyyaml>=6.0,<7.0",
    # Robust natural-language date parsing fallback (the LLM does most of it).
    "python-dateutil>=2.8,<3.0",
    # Timezone data — required on Windows / minimal Linux images.
    "tzdata>=2024.1; platform_system == 'Windows'",
    # Google Sheets client + service-account auth (Step 4).
    "gspread>=6.0,<7.0",
    "google-auth>=2.30,<3.0",
]

# Optional providers + front-ends — install only when actually using them.
#   pip install -e ".[openai]"      → enables ChatGPT
#   pip install -e ".[anthropic]"   → enables Claude
#   pip install -e ".[telegram]"    → enables the Telegram bot front-end
#   pip install -e ".[all]"         → all providers + front-ends
[project.optional-dependencies]
openai = ["openai>=1.40,<2.0"]
anthropic = ["anthropic>=0.40,<1.0"]
telegram = ["python-telegram-bot>=21.6,<22.0"]
# Postgres + NocoDB edition (Step 10b): SQLAlchemy 2.0 typed models +
# psycopg3 driver + Alembic migrations.  Install with:
#   pip install -e ".[nocodb]"
nocodb = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "alembic>=1.13,<2.0",
]
all = [
    "openai>=1.40,<2.0",
    "anthropic>=0.40,<1.0",
    "python-telegram-bot>=21.6,<22.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "alembic>=1.13,<2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "python-telegram-bot>=21.6,<22.0",
    # Bundles a pandoc binary so `python scripts/build_handbook.py`
    # works without a system-wide pandoc install.
    "pypandoc-binary>=1.13",
    # Postgres edition stack — also installed in dev so tests can run
    # the SQLite-in-memory variant of PostgresLedgerBackend.
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
]

[project.scripts]
expense = "expense_tracker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/expense_tracker"]

# Bundle category / sheet-format YAML files into the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/expense_tracker/extractor/data" = "expense_tracker/extractor/data"
"src/expense_tracker/ledger/sheets/data" = "expense_tracker/ledger/sheets/data"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]
ignore = [
    "N803",  # arg name should be lowercase  (we use UPPERCASE for env-style settings)
    "N806",  # variable should be lowercase  (same reason)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "strict"
filterwarnings = [
    "error",
    # pydantic-settings deprecation warnings from upstream — not our problem
    "ignore::DeprecationWarning:pydantic.*",
    # Alembic 1.18+ emits a DeprecationWarning the first time a
    # Config object is read without `path_separator`.  Our alembic.ini
    # *does* set it, but Alembic still re-reads the option from a
    # raw RawConfigParser and warns once.  Out of our hands.
    "ignore::DeprecationWarning:alembic.*",
]
